--- a/_sources/ch03/wave_fun.ipynb
+++ b/_sources/ch03/wave_fun.ipynb
@@ -335,6 +335,100 @@
     "  $$\\int^{+\\infty}_{-\\infty} \\int^{+\\infty}_{-\\infty} \\int^{+\\infty}_{-\\infty} |\\psi(x, y, z)|^2 dx \\, dy \\, dz = 1$$\n",
     "\n",
     "\n",
+    ":::admonition **Normalization example**\n",
+    ":class: info, dropdown\n",
+    "\n",
+    "- Given the wave function $\\psi(x)=x$ on the range $[0,1]$, normalize it so that it becomes a proper probability distribution function.\n",
+    "\n",
+    "We require\n",
+    "\n",
+    "$$\n",
+    "\\int_0^1 |\\psi(x)|^2 \\, dx = 1.\n",
+    "$$\n",
+    "\n",
+    "Substitute $\\psi(x)=C\\,x$:\n",
+    "\n",
+    "$$\n",
+    "\\int_0^1 (C\\,x)^2 \\, dx = 1,\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "C^2 \\int_0^1 x^2 \\, dx = 1,\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "C^2 \\cdot \\frac{1}{3} = 1.\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "C^2 = 3 \\quad \\Rightarrow \\quad C = \\sqrt{3}.\n",
+    "$$\n",
+    "\n",
+    "Therefore the normalized wave function is\n",
+    "\n",
+    "$$\n",
+    "\\psi(x) = \\sqrt{3}\\,x, \\quad 0 \\leq x \\leq 1.\n",
+    "$$\n",
+    ":::\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5363962e",
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Define x values\n",
+    "x = np.linspace(0, 1, 500)\n",
+    "\n",
+    "# Unnormalized psi\n",
+    "psi_unnorm = x\n",
+    "\n",
+    "# Normalized psi (C = sqrt(3))\n",
+    "psi_norm = np.sqrt(3) * x\n",
+    "\n",
+    "# Create the figure and axes\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "# --- Plot 1: Unnormalized psi ---\n",
+    "axes[0].plot(x, psi_unnorm, label=r'$\\psi(x) = x$')\n",
+    "axes[0].fill_between(x, psi_unnorm**2, alpha=0.3, color=\"blue\", label=r'$|\\psi(x)|^2$')\n",
+    "axes[0].set_title(\"Unnormalized $\\psi(x)$\")\n",
+    "axes[0].set_xlabel(\"x\")\n",
+    "axes[0].set_ylabel(r\"$\\psi(x)$ and $|\\psi(x)|^2$\")\n",
+    "axes[0].legend()\n",
+    "axes[0].grid(True)\n",
+    "\n",
+    "# --- Plot 2: Normalized psi ---\n",
+    "axes[1].plot(x, psi_norm, label=r'$\\psi(x) = \\sqrt{3}\\,x$')\n",
+    "axes[1].fill_between(x, psi_norm**2, alpha=0.3, color=\"green\", label=r'$|\\psi(x)|^2$')\n",
+    "axes[1].set_title(\"Normalized $\\psi(x)$\")\n",
+    "axes[1].set_xlabel(\"x\")\n",
+    "axes[1].set_ylabel(r\"$\\psi(x)$ and $|\\psi(x)|^2$\")\n",
+    "axes[1].legend()\n",
+    "axes[1].grid(True)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a43b69b7",
+   "metadata": {},
+   "source": [
     "\n",
     "### What can we do with probability distribution functions (PDF)? \n",
     "\n",
@@ -369,8 +463,7 @@
     "|   $\\langle E \\rangle=\\int \\psi^{*}(x) \\hat{H} \\psi(x)  dx$   | $\\hat{H}=-\\frac{\\hbar^2}{2m}\\frac{d^2}{dx^2}+V(x)$ |\n",
     "|  $\\langle K \\rangle=\\int \\psi^{*}(x) \\hat{K}\\psi(x)  dx  $   |   $\\hat{K}=-\\frac{\\hbar^2}{2m}\\frac{d^2}{dx^2}$    |\n",
     "|   $\\langle p \\rangle=\\int \\psi^{*}(x) \\hat{p} \\psi(x)  dx$   |           $\\hat{p}=-i\\hbar\\frac{d}{dx}$            |\n",
-    "| $\\langle p^2 \\rangle=\\int \\psi^{*}(x) \\hat{p}^2 \\psi(x)  dx$ |        $\\hat{p}^2=-\\hbar^2\\frac{d^2}{dx^2}$        |\n",
-    "\n"
+    "| $\\langle p^2 \\rangle=\\int \\psi^{*}(x) \\hat{p}^2 \\psi(x)  dx$ |        $\\hat{p}^2=-\\hbar^2\\frac{d^2}{dx^2}$        |"
    ]
   }
  ],
