--- a/_sources/ch03/wave_fun.ipynb
+++ b/_sources/ch03/wave_fun.ipynb
@@ -465,6 +465,107 @@
     "|   $\\langle p \\rangle=\\int \\psi^{*}(x) \\hat{p} \\psi(x)  dx$   |           $\\hat{p}=-i\\hbar\\frac{d}{dx}$            |\n",
     "| $\\langle p^2 \\rangle=\\int \\psi^{*}(x) \\hat{p}^2 \\psi(x)  dx$ |        $\\hat{p}^2=-\\hbar^2\\frac{d^2}{dx^2}$        |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51ec5af4",
+   "metadata": {},
+   "source": [
+    "### Example of using probabilsitic calculations in QM\n",
+    "\n",
+    "#### Example 1 — Probability in a region (1D)\n",
+    "\n",
+    "Take the normalized wavefunction on $[0,1]$: $\\psi(x)=\\sqrt{3}\\,x$. Then $p(x)=|\\psi(x)|^2=3x^2$.\n",
+    "\n",
+    "* Probability that the particle lies in $[a,b]\\subset[0,1]$:\n",
+    "\n",
+    "$$\n",
+    "P(a<x<b)=\\int_a^b 3x^2\\,dx= \\left[x^3\\right]_a^b=b^3-a^3.\n",
+    "$$\n",
+    "\n",
+    "* Concrete numbers, say $[0.3,0.6]$:\n",
+    "\n",
+    "$$\n",
+    "P(0.3<x<0.6)=0.6^3-0.3^3=0.216-0.027=0.189.\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Example 2 — 3D slice probability (separable state)\n",
+    "\n",
+    "Let $\\psi(x,y,z)=\\sqrt{27}\\,xyz$ on the unit cube $[0,1]^3$ (this is normalized since $|\\psi|^2=27x^2y^2z^2$ and $\\int_0^1 x^2dx=\\tfrac13$, so $27(\\tfrac13)^3=1$).\n",
+    "\n",
+    "* Probability the particle is inside the rectangular box $[a_x,b_x]\\times[a_y,b_y]\\times[a_z,b_z]$:\n",
+    "\n",
+    "$$\n",
+    "P=\\int_{a_x}^{b_x}\\!\\!\\int_{a_y}^{b_y}\\!\\!\\int_{a_z}^{b_z}27x^2y^2z^2\\,dz\\,dy\\,dx\n",
+    "= \\big(b_x^3-a_x^3\\big)\\big(b_y^3-a_y^3\\big)\\big(b_z^3-a_z^3\\big).\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Example 3 — Averages and variance from a PDF\n",
+    "\n",
+    "For $\\psi(x)=\\sqrt{3}\\,x$ on $[0,1]$ (so $p(x)=3x^2$):\n",
+    "\n",
+    "* Mean position:\n",
+    "\n",
+    "$$\n",
+    "\\langle x\\rangle=\\int_0^1 x\\,3x^2\\,dx=3\\int_0^1 x^3dx=\\tfrac34.\n",
+    "$$\n",
+    "\n",
+    "* Mean square position:\n",
+    "\n",
+    "$$\n",
+    "\\langle x^2\\rangle=\\int_0^1 x^2\\,3x^2\\,dx=3\\int_0^1 x^4dx=\\tfrac35.\n",
+    "$$\n",
+    "\n",
+    "* Variance and standard deviation:\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{Var}(x)=\\langle x^2\\rangle-\\langle x\\rangle^2=\\tfrac35-\\Big(\\tfrac34\\Big)^2=\\tfrac{3}{80},\\qquad\n",
+    "\\sigma_x=\\sqrt{\\tfrac{3}{80}}\\approx 0.1937.\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "#### Example 4 — Operator expectations (momentum/energy in a box)\n",
+    "\n",
+    "Operator rules:\n",
+    "\n",
+    "* $ \\hat{p}=-i\\hbar\\,\\dfrac{d}{dx}$,\n",
+    "* $ \\hat{H}=-\\dfrac{\\hbar^2}{2m}\\dfrac{d^2}{dx^2}+V(x)$.\n",
+    "\n",
+    "Use the infinite square well on $[0,1]$ with $V(x)=0$ inside and $\\psi_n(x)=\\sqrt{2}\\sin(n\\pi x)$, which is normalized.\n",
+    "\n",
+    "* Momentum expectation:\n",
+    "\n",
+    "$$\n",
+    "\\langle p\\rangle=\\int_0^1\\psi_n^*(-i\\hbar)\\psi_n'\\,dx=0\n",
+    "$$\n",
+    "\n",
+    "(the integrand is odd over a full sine half-wave, or integrate by parts with vanishing boundary terms).\n",
+    "\n",
+    "* Momentum squared:\n",
+    "\n",
+    "$$\n",
+    "\\langle p^2\\rangle=\\int_0^1\\psi_n^*(-\\hbar^2)\\psi_n''\\,dx\n",
+    "=(n\\pi\\hbar)^2.\n",
+    "$$\n",
+    "\n",
+    "* Energy (since $\\hat{H}=\\hat{p}^2/2m$ inside the well):\n",
+    "\n",
+    "$$\n",
+    "\\langle E\\rangle=\\frac{\\langle p^2\\rangle}{2m}=\\frac{(n\\pi\\hbar)^2}{2m}.\n",
+    "$$\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "666b55c4",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
