'wav fun with nodes'

--- a/ch03/wave_fun.ipynb
+++ b/ch03/wave_fun.ipynb
@@ -296,21 +296,56 @@
    },
    "outputs": [],
    "source": [
-    "# For a standard normal with sigma=1, mu=0\n",
-    "r = np.random.randn(50)\n",
+    "# -----------------------------\n",
+    "# Correct sampling for H-atom 1s\n",
+    "# -----------------------------\n",
+    "N = 6000\n",
+    "a0 = 1.0\n",
     "\n",
-    "fig, ax = plt.subplots(ncols=2) \n",
-    "ax[0].plot(r,  color='blue', label='observing molecule position')\n",
-    "ax[1].hist(r,  density=True, color='red',  label = 'histogram')\n",
+    "# For 1s: if x = 2r/a0, then x ~ Gamma(k=3, theta=1)\n",
+    "x = np.random.gamma(shape=3.0, scale=1.0, size=N)\n",
+    "r = 0.5 * a0 * x\n",
     "\n",
+    "# Isotropic angles\n",
+    "u = np.random.rand(N)\n",
+    "theta = np.arccos(1 - 2*u)\n",
+    "phi = 2*np.pi*np.random.rand(N)\n",
     "\n",
-    "ax[0].set_xlabel('Samples of RN')\n",
-    "ax[0].set_ylabel('Values of RN')\n",
+    "# Convert to Cartesian and take a 2D projection\n",
+    "x3 = r * np.sin(theta) * np.cos(phi)\n",
+    "y3 = r * np.sin(theta) * np.sin(phi)\n",
     "\n",
-    "ax[1].set_xlabel('Values of RN')\n",
-    "ax[1].set_ylabel('Probability Density')\n",
-    "fig.legend();\n",
-    "fig.tight_layout()"
+    "# Histogram for the shell probability density P(r) (per unit r)\n",
+    "bins = np.linspace(0, 6*a0, 80)\n",
+    "hist, edges = np.histogram(r, bins=bins, density=True)\n",
+    "centers = 0.5*(edges[1:] + edges[:-1])\n",
+    "\n",
+    "# Analytical radial distribution P(r) = 4 r^2 |psi|^2 = 4 r^2 / (a0^3*pi) * exp(-2r/a0) * pi\n",
+    "# Simplifies to: P(r) = (4/a0^3) r^2 exp(-2r/a0), which integrates to 1\n",
+    "rr = np.linspace(0, bins[-1], 400)\n",
+    "P_r = (4.0/(a0**3)) * rr**2 * np.exp(-2*rr/a0)\n",
+    "\n",
+    "# Side-by-side subplots: dot cloud and radial distribution\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "# Left: simulated dot cloud\n",
+    "axs[0].scatter(x3, y3, s=1, alpha=0.5)\n",
+    "axs[0].set_title(\"Hydrogen 1s: position observations (2D projection)\")\n",
+    "axs[0].set_xlabel(\"x [$a_0$]\")\n",
+    "axs[0].set_ylabel(\"y [$a_0$]\")\n",
+    "axs[0].set_aspect('equal')\n",
+    "\n",
+    "# Right: radial distribution histogram + analytical curve\n",
+    "axs[1].plot(centers, hist, lw=2, label=\"Monte Carlo (histogram)\")\n",
+    "axs[1].plot(rr, P_r, lw=2, linestyle=\"--\", label=\"Analytical 1s\")\n",
+    "axs[1].set_title(\"Radial probability distribution\")\n",
+    "axs[1].set_xlabel(\"r [$a_0$]\")\n",
+    "axs[1].set_ylabel(\"$P(r)$\")\n",
+    "axs[1].legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -335,7 +370,7 @@
     "  $$\\int^{+\\infty}_{-\\infty} \\int^{+\\infty}_{-\\infty} \\int^{+\\infty}_{-\\infty} |\\psi(x, y, z)|^2 dx \\, dy \\, dz = 1$$\n",
     "\n",
     "\n",
-    ":::admonition **Normalization example**\n",
+    ":::{admonition} **Normalization example**\n",
     ":class: info, dropdown\n",
     "\n",
     "- Given the wave function $\\psi(x)=x$ on the range $[0,1]$, normalize it so that it becomes a proper probability distribution function.\n",
@@ -370,6 +405,7 @@
     "$$\n",
     "\\psi(x) = \\sqrt{3}\\,x, \\quad 0 \\leq x \\leq 1.\n",
     "$$\n",
+    "\n",
     ":::\n",
     "\n",
     "\n",
@@ -467,6 +503,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "303187a6",
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from math import erf, sqrt\n",
+    "\n",
+    "# ----- Parameters -----\n",
+    "sigma = 1.0  # width of the Gaussian (harmonic oscillator ground state)\n",
+    "x0, x1 = -1.0, 1.0  # interval to integrate over\n",
+    "\n",
+    "# ----- Define |psi(x)|^2 for a normalized Gaussian -----\n",
+    "def prob_density(x, sigma):\n",
+    "    # |psi(x)|^2 = (1/(sqrt(2*pi)*sigma)) * exp(-x^2/(2*sigma^2))\n",
+    "    return (1.0/(np.sqrt(2*np.pi)*sigma)) * np.exp(-x**2/(2*sigma**2))\n",
+    "\n",
+    "# Probability via the error function (analytic CDF of a normal distribution)\n",
+    "def interval_probability(a, b, sigma):\n",
+    "    return 0.5*(erf(b/(sqrt(2)*sigma)) - erf(a/(sqrt(2)*sigma)))\n",
+    "\n",
+    "P = interval_probability(x0, x1, sigma)\n",
+    "\n",
+    "# ----- Plot -----\n",
+    "xs = np.linspace(-4*sigma, 4*sigma, 800)\n",
+    "ys = prob_density(xs, sigma)\n",
+    "\n",
+    "fig = plt.figure(figsize=(10, 5))\n",
+    "\n",
+    "# Title with the integral expression\n",
+    "plt.title(r\"$P_{x_0<x<x_1}=\\int_{x_0}^{x_1}|\\psi(x)|^2\\,dx$\" + \n",
+    "          f\"\\nSelected interval: [{x0:.2f}, {x1:.2f}]\",\n",
+    "          loc=\"left\")\n",
+    "\n",
+    "# Curve\n",
+    "plt.plot(xs, ys, linewidth=3)\n",
+    "\n",
+    "# Shade between x0 and x1 under the curve\n",
+    "mask = (xs >= x0) & (xs <= x1)\n",
+    "plt.fill_between(xs[mask], ys[mask], 0, alpha=0.25)\n",
+    "\n",
+    "# Mark the boundaries with vertical dashed lines\n",
+    "plt.axvline(x0, linestyle=\"--\", linewidth=2)\n",
+    "plt.axvline(x1, linestyle=\"--\", linewidth=2)\n",
+    "\n",
+    "# Tick marks and labels\n",
+    "plt.xlabel(\"x\")\n",
+    "plt.ylabel(r\"$|\\psi(x)|^2$\")\n",
+    "\n",
+    "# Annotate the probability\n",
+    "plt.text(0.02, 0.90, rf\"$P_{{{x0:.2f}<x<{x1:.2f}}} = {P:.3f}$\",\n",
+    "         transform=plt.gca().transAxes, fontsize=16)\n",
+    "\n",
+    "plt.xlim(xs.min(), xs.max())\n",
+    "plt.ylim(bottom=0)\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "out_path = \"/mnt/data/interval_probability_demo.png\"\n",
+    "plt.savefig(out_path, dpi=200)\n",
+    "plt.show()\n",
+    "\n",
+    "out_path\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "51ec5af4",
    "metadata": {},
@@ -560,12 +668,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "666b55c4",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
