--- a/_sources/ch03/wave_fun.ipynb
+++ b/_sources/ch03/wave_fun.ipynb
@@ -407,8 +407,6 @@
     "$$\n",
     "\n",
     ":::\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -431,30 +429,36 @@
     "\n",
     "# Unnormalized psi\n",
     "psi_unnorm = x\n",
+    "psi2_unnorm = psi_unnorm**2\n",
     "\n",
     "# Normalized psi (C = sqrt(3))\n",
     "psi_norm = np.sqrt(3) * x\n",
+    "psi2_norm = psi_norm**2\n",
+    "\n",
+    "# Compute integrals for annotation\n",
+    "area_unnorm = np.trapz(psi2_unnorm, x)\n",
+    "area_norm = np.trapz(psi2_norm, x)\n",
     "\n",
     "# Create the figure and axes\n",
     "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
     "\n",
-    "# --- Plot 1: Unnormalized psi ---\n",
-    "axes[0].plot(x, psi_unnorm, label=r'$\\psi(x) = x$')\n",
-    "axes[0].fill_between(x, psi_unnorm**2, alpha=0.3, color=\"blue\", label=r'$|\\psi(x)|^2$')\n",
-    "axes[0].set_title(\"Unnormalized $\\psi(x)$\")\n",
+    "# --- Plot 1: Unnormalized psi² ---\n",
+    "axes[0].fill_between(x, psi2_unnorm, alpha=0.4, color=\"blue\")\n",
+    "axes[0].set_title(\"Unnormalized $|\\psi(x)|^2$\")\n",
     "axes[0].set_xlabel(\"x\")\n",
-    "axes[0].set_ylabel(r\"$\\psi(x)$ and $|\\psi(x)|^2$\")\n",
-    "axes[0].legend()\n",
+    "axes[0].set_ylabel(r\"$|\\psi(x)|^2$\")\n",
     "axes[0].grid(True)\n",
+    "axes[0].text(0.5, 0.2, rf\"Area = {area_unnorm:.2f}\", \n",
+    "             transform=axes[0].transAxes, fontsize=12, color=\"blue\")\n",
     "\n",
-    "# --- Plot 2: Normalized psi ---\n",
-    "axes[1].plot(x, psi_norm, label=r'$\\psi(x) = \\sqrt{3}\\,x$')\n",
-    "axes[1].fill_between(x, psi_norm**2, alpha=0.3, color=\"green\", label=r'$|\\psi(x)|^2$')\n",
-    "axes[1].set_title(\"Normalized $\\psi(x)$\")\n",
+    "# --- Plot 2: Normalized psi² ---\n",
+    "axes[1].fill_between(x, psi2_norm, alpha=0.4, color=\"green\")\n",
+    "axes[1].set_title(\"Normalized $|\\psi(x)|^2$\")\n",
     "axes[1].set_xlabel(\"x\")\n",
-    "axes[1].set_ylabel(r\"$\\psi(x)$ and $|\\psi(x)|^2$\")\n",
-    "axes[1].legend()\n",
+    "axes[1].set_ylabel(r\"$|\\psi(x)|^2$\")\n",
     "axes[1].grid(True)\n",
+    "axes[1].text(0.5, 0.2, rf\"Area = {area_norm:.2f}\", \n",
+    "             transform=axes[1].transAxes, fontsize=12, color=\"green\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
