--- a/ch03/note03A.ipynb
+++ b/ch03/note03A.ipynb
@@ -48,6 +48,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: center;\">\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/Yg0LT3n4mYY?si=yIxDAvxxFRzQ8z1J\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Qualitative trends in wavefunction beahviour\n",
     "\n",
     ":::{figure-md} markdown-fig\n",
