--- a/math/note05.ipynb
+++ b/math/note05.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Algebra 2: Enter The Matrix"
+    "# Operators and Matrices"
    ]
   },
   {
@@ -370,109 +370,6 @@
     "- **Diagonal matrices**: If $A$ and $B$ are both diagonal matrices, then $AB = BA$  because each entry in the diagonal simply scales the corresponding entry in the other matrix.\n",
     "\n",
     "- **Identity matrix**: The identity matrix $I$ commutes with any matrix $A$, i.e., $IA = AI = A$, because multiplying by the identity matrix leaves the original matrix unchanged."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "vector = np.array([1,1])\n",
-    "\n",
-    "# Define two commuting matrices (scaling matrices)\n",
-    "A = np.array([[2, 0], [0, 0.5]])\n",
-    "B = np.array([[3, 0], [0, 0.75]])\n",
-    "\n",
-    "# Compute the products A*B and B*A\n",
-    "AB = A @ B\n",
-    "BA = B @ A\n",
-    "\n",
-    "# Apply the transformations\n",
-    "AB_vector = AB @ vector\n",
-    "BA_vector = BA @ vector\n",
-    "\n",
-    "# Redefine non-commuting matrices for more distinct transformations\n",
-    "C = np.array([[0, -1], [1, 0]])  # 90-degree rotation matrix\n",
-    "D = np.array([[1, 2], [0, 1]])  # Horizontal shear\n",
-    "\n",
-    "# Compute the products C*D and D*C (non-commuting case)\n",
-    "CD = C @ D\n",
-    "DC = D @ C\n",
-    "\n",
-    "# Apply the transformations\n",
-    "CD_vector = CD @ vector\n",
-    "DC_vector = DC @ vector\n",
-    "\n",
-    "# Create subplots for commuting and non-commuting cases\n",
-    "fig, axs = plt.subplots(2, 2, figsize=(12, 12))\n",
-    "\n",
-    "# Plot 1: A * B (commuting matrices)\n",
-    "axs[0, 0].axhline(0, color='black',linewidth=0.5)\n",
-    "axs[0, 0].axvline(0, color='black',linewidth=0.5)\n",
-    "axs[0, 0].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
-    "axs[0, 0].quiver(0, 0, AB_vector[0], AB_vector[1], angles='xy', scale_units='xy', scale=1, color='red', label='A * B Vector')\n",
-    "axs[0, 0].set_xlim(-10, 10)\n",
-    "axs[0, 0].set_ylim(-10, 10)\n",
-    "axs[0, 0].set_title('Commuting: A * B')\n",
-    "axs[0, 0].legend()\n",
-    "axs[0, 0].grid(True)\n",
-    "axs[0, 0].set_aspect('equal', adjustable='box')\n",
-    "\n",
-    "# Plot 2: B * A (commuting matrices)\n",
-    "axs[0, 1].axhline(0, color='black',linewidth=0.5)\n",
-    "axs[0, 1].axvline(0, color='black',linewidth=0.5)\n",
-    "axs[0, 1].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
-    "axs[0, 1].quiver(0, 0, BA_vector[0], BA_vector[1], angles='xy', scale_units='xy', scale=1, color='green', label='B * A Vector')\n",
-    "axs[0, 1].set_xlim(-10, 10)\n",
-    "axs[0, 1].set_ylim(-10, 10)\n",
-    "axs[0, 1].set_title('Commuting: B * A')\n",
-    "axs[0, 1].legend()\n",
-    "axs[0, 1].grid(True)\n",
-    "axs[0, 1].set_aspect('equal', adjustable='box')\n",
-    "\n",
-    "# Plot 3: C * D (non-commuting matrices)\n",
-    "axs[1, 0].axhline(0, color='black',linewidth=0.5)\n",
-    "axs[1, 0].axvline(0, color='black',linewidth=0.5)\n",
-    "axs[1, 0].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
-    "axs[1, 0].quiver(0, 0, CD_vector[0], CD_vector[1], angles='xy', scale_units='xy', scale=1, color='purple', label='C * D Vector')\n",
-    "axs[1, 0].set_xlim(-10, 10)\n",
-    "axs[1, 0].set_ylim(-10, 10)\n",
-    "axs[1, 0].set_title('Non-Commuting: C * D')\n",
-    "axs[1, 0].legend()\n",
-    "axs[1, 0].grid(True)\n",
-    "axs[1, 0].set_aspect('equal', adjustable='box')\n",
-    "\n",
-    "# Plot 4: D * C (non-commuting matrices)\n",
-    "axs[1, 1].axhline(0, color='black',linewidth=0.5)\n",
-    "axs[1, 1].axvline(0, color='black',linewidth=0.5)\n",
-    "axs[1, 1].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
-    "axs[1, 1].quiver(0, 0, DC_vector[0], DC_vector[1], angles='xy', scale_units='xy', scale=1, color='orange', label='D * C Vector')\n",
-    "axs[1, 1].set_xlim(-10, 10)\n",
-    "axs[1, 1].set_ylim(-10, 10)\n",
-    "axs[1, 1].set_title('Non-Commuting: D * C')\n",
-    "axs[1, 1].legend()\n",
-    "axs[1, 1].grid(True)\n",
-    "axs[1, 1].set_aspect('equal', adjustable='box')\n",
-    "\n",
-    "# Display the plots\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Conclusion\n",
-    "\n",
-    "By treating functions as vectors and operators as matrices, quantum mechanics becomes a powerful framework for solving complex problems. Operations like differentiation, integration, and multiplication by physical observables can be represented as matrix operations, which leads to efficient numerical methods in computational quantum mechanics."
    ]
   }
  ],
